--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-<title>Physics Calculator | Formulas, Equations & Tools for Students</title>
+<title>Physics Calculator  </title>
 <meta name="description" content="Physics Calculator - Find formulas, solve equations, and learn physics concepts easily. Perfect for students, teachers, and enthusiasts worldwide.">
 <meta name="keywords" content="physics calculator, physics formulas, science equations, kinematics, projectile motion, work and energy, quantum mechanics">
 <meta name="author" content="Physics Hub Team">
